@@ -5,6 +5,7 @@ UI: Adapt link colors for better contrast
 UI: Show information if provider needs special settings
 Bugfix: Correctly format links after newline
 Bugfix: Correct color of quoted text for some delegates
+Other: Check whether image attachment is gif and send as gif if yes
 
 1.0.1 2023-07-04
 Bugfix: Keep aspect ratio in image viewer for small images, too
